Make it work
* Partially update syntax
* Add setup.py
* Update docker compose to handle external CouchDB connection
